# pam_lxc

./: .gitignore  configure.ac
src/: Makefile.am  pam_lxc.c
